# geo

./: Cargo.toml
geo/: Cargo.toml
geo-generic-alg/: Cargo.toml
geo-generic-alg/benches/: area.rs
geo-generic-alg/src/: geo_trait_marker.rs  impl_geo_trait.rs  impl_geo_traits.rs  lib.rs  types.rs
geo-generic-alg/src/algorithm/: area.rs  bounding_rect.rs  centroid.rs  dimensions.rs
geo-generic-tests/: Cargo.toml
geo-generic-tests/src/: lib.rs
geo-generic-tests/src/simple/: alg_test.rs  coord.rs  geometry.rs  line_string.rs  mod.rs  point.rs  polygon.rs
geo-generic-tests/src/wkb/: mod.rs
geo-generic-tests/src/wkb/reader/: coord.rs  geometry.rs  geometry_collection.rs  linearring.rs  linestring.rs  mod.rs  multilinestring.rs  multipoint.rs  multipolygon.rs  point.rs  polygon.rs  util.rs
geo-traits/: Cargo.toml
geo-traits-ext/: Cargo.toml
geo-traits-ext/src/: coord.rs  geometry.rs  geometry_collection.rs  lib.rs  line.rs  line_string.rs  marker.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  point.rs  polygon.rs  rect.rs  triangle.rs  type_tag.rs
geo-traits/src/: coord.rs  geometry.rs  geometry_collection.rs  lib.rs  line.rs  line_string.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  point.rs  polygon.rs  rect.rs  triangle.rs
geo-types/: Cargo.toml
geo-types/src/: lib.rs  to_geo.rs
geo-types/src/geometry/: coord.rs  geometry_collection.rs  line.rs  line_string.rs  mod.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  point.rs  polygon.rs  rect.rs  triangle.rs
geo/benches/: area.rs
geo/fuzz/: Cargo.toml
(+3 files in other folders)
